altera background login

--- a/SocialMediaFreelas.App/Pages/Login/Cliente/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Login/Cliente/Index.cshtml
@@ -6,6 +6,7 @@
 <style>
     body{
     background-color: aquamarine;
+    background: linear-gradient(180deg, #4e89ff, #2f5299);
 }
 
 .container {
