--- a/SocialMediaFreelas.App/Pages/Login/Freelancer/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Login/Freelancer/Index.cshtml
@@ -6,6 +6,8 @@
 <style>
     body{
     background-color: #dee9ff;
+    background: rgb(253,253,254);
+    background: linear-gradient(90deg, rgba(253,253,254,1) 1%, rgba(223,223,245,1) 33%, rgba(232,251,251,1) 73%);
 }
 
 .container {
@@ -15,7 +17,7 @@
 }
 
 .login-form{
-    padding: 10vh 0;
+    padding: 20vh 0;
 }
 
 .login-form form{
