--- a/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
@@ -7,6 +7,7 @@
 <style>
     body {
         background-color: #edf2f6 !important;
+        background: linear-gradient(180deg, #4e89ff, #2f5299);
         font-family: Arial, sans-serif !important;
     }
 
