Ajusta navbar e muda tela home cliente e freelancer

--- a/SocialMediaFreelas.App/Pages/Experiencias/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Experiencias</h1>
 
 @*@if (TempData["MensagemSucesso"] != null)
 {
@@ -14,7 +14,7 @@
     </div>
 }*@
 
-<table class="table">
+<table class="table table-light">
     <thead>
         <tr>
             <th>
