--- a/SocialMediaFreelas.App/Pages/Home/Freelancer/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Home/Freelancer/Index.cshtml
@@ -6,28 +6,7 @@
 
 <style>
 
-
-    @@media (min-width: 1000px)
-    {
-
-        .profile-img {
-            max-width: 500px !important;
-        }
-        
-    }
-
-    @@media (min-width: 1500px) {
-
-        .profile-img 
-        {
-            max-width: 400px !important;
-        }
-
-        #titulo-principal-home
-        {
-            max-width: 60ch;
-        }
-    }
+   
 </style>
 
     <!-- Navigation-->
@@ -36,18 +15,18 @@
     <header class="py-5">
         <div class="container px-5 pb-5">
             <div class="row gx-5 align-items-center">
-                <div class="col-xxl-5">
+                <div class="col-xxl-12">
                     <!-- Header text content-->
                     <div class="text-center text-xxl-start">
                         <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase"></div></div>
                         <div class="fs-3 fw-light text-muted">Seja bem vindo!</div>
                         <h1 class="display-3 fw-bolder mb-5" id="titulo-principal-home"><span class="text-gradient d-inline">Encontre um serviço agora.</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="../vagas">Encontre um serviço</a>
+                        <button class="button-29" role="button" id="botaoAcao" href="../vagas">Encontre um serviço</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-xxl-7">
+                <div class="">
                     <!-- Header profile picture-->
                     <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                         <div class="profile bg-gradient-primary-to-secondary">
