--- a/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
+++ b/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
@@ -1,18 +1,40 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+﻿<style>
+    #botaoSair 
+    {
+        border: 0 !important;
+        background: rgba(0,0,0,0);
+        color: rgba(0, 0, 0, 0.5);
+        text-decoration: none;
+        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
+        font-size: 12.8px;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+        font-weight: 700;
+        cursor: pointer;
+    }
+
+    #botaoSair:hover 
+    {
+        color: rgba(0, 0, 0, 0.6);
+    }
+</style>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
     <div class="container px-5">
         <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Freelas Unit</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                <li class="nav-item"><a class="nav-link" href="../Home/Cliente">Inicio C</a></li>
-                <li class="nav-item"><a class="nav-link" href="../Home/Freelancer">Inicio F</a></li>
-                <li class="nav-item"><a class="nav-link" href="../Vagas/">Vagas</a></li>
-                <li class="nav-item"><a class="nav-link" href="../Freelancers/">Freelancers</a></li>
-                <li class="nav-item"><a class="nav-link" href="../Clientes/">Clientes</a></li>
-                <li class="nav-item"><a class="nav-link" href="../Experiencias/">Experiencias</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Home/Cliente/Index">Inicio C</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Home/Freelancer/Index">Inicio F</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Vagas/Index">Vagas</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Vagas/IndexByUser"> Minhas Vagas</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Freelancers/Index">Freelancers</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Clientes/Index">Clientes</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Experiencias/Index">Experiencias</a></li>
+                <li class="nav-item"><a class="nav-link" asp-page="/Experiencias/IndexByUser">Minhas Experiencias</a></li>
 
                 <form method="post" asp-page-handler="Logout">
-                    <input type="submit" value="teste">
+                    <input id="botaoSair" role="link" type="submit" class="nav-link" value="Sair">
                 </form>
             </ul>
         </div>
