--- a/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,84 @@
     <link rel="stylesheet" href="~/SocialMediaFreelas.App.styles.css" asp-append-version="true" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <style>
+        body {
+            background: linear-gradient(180deg, #4e89ff, #2f5299) !important;
+            color: #fff !important;
+        }
+
+        .text-muted {
+            color: #fff !important;
+        }
+
+        .button-29 {
+            align-items: center;
+            appearance: none;
+            background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+            border: 0;
+            border-radius: 6px;
+            box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+            box-sizing: border-box;
+            color: #fff;
+            cursor: pointer;
+            display: inline-flex;
+            font-family: "JetBrains Mono",monospace;
+            height: 48px;
+            justify-content: center;
+            line-height: 1;
+            list-style: none;
+            overflow: hidden;
+            padding-left: 16px;
+            padding-right: 16px;
+            position: relative;
+            text-align: left;
+            text-decoration: none;
+            transition: box-shadow .15s,transform .15s;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            white-space: nowrap;
+            will-change: box-shadow,transform;
+            font-size: 18px;
+        }
+
+            .button-29:focus {
+                box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+            }
+
+            .button-29:hover {
+                box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+                transform: translateY(-2px);
+            }
+
+            .button-29:active {
+                box-shadow: #3c4fe0 0 3px 7px inset;
+                transform: translateY(2px);
+            }
+
+
+        #footer {
+           position: fixed;
+           bottom: 0;
+           height: 100px;
+           width: 100%;
+           background-color: #fff;
+           color: black;
+           text-align: center;
+           font-weight: 700;
+        }
+
+        #footer p {
+            margin-top: 40px;
+            color: rgba(0,0,0,0.6);
+        }
+
+        #footer p span {
+            margin-top: 40px;
+            color: rgb(0, 123, 255);
+        }
+    </style>
 </head>
 <body>
 
@@ -19,6 +97,10 @@
             @RenderBody()
        </main>
     </div>
+
+    <footer id="footer">
+        <p>Todos os direitos reservados a <span>Freelas Unit</span> &copy;</p>
+    </footer>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
