--- a/SocialMediaFreelas.App/Pages/Vagas/IndexByUser.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/IndexByUser.cshtml
@@ -1,4 +1,96 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Vagas.IndexByUserModel
 @{
+    ViewData["Title"] = "Index";
 }
+
+<h1>Vagas</h1>
+
+@*@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success button-success" role="alert" id="success-message">
+        @TempData["MensagemSucesso"]
+        <i class="fa fa-check" aria-hidden="true"></i>
+    </div>
+}*@
+
+<table class="table table-light">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].ClienteId)
+            </th>
+            @*            <th>
+            @Html.DisplayNameFor(model => model.Response[0].FreelancerId)
+            </th>*@
+
+            <th>
+                Candidatos
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Titulo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Descricao)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Cargo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Tipo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Remuneracao)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Response)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClienteId)
+                </td>
+                <td>
+                    @if (!Model.Response.First<VagaViewModel>(x => x.Id == item.Id).Freelancers.Any())
+                    {
+                        <p>Nenhum candidado</p>
+                    }
+                    else
+                    {
+                        @foreach (var freelancer in Model.Response.First<VagaViewModel>(x => x.Id == item.Id).Freelancers)
+                        {
+                            <p>
+                                @freelancer.Nome
+                                <a asp-page="../Freelancers/Details" asp-route-id="@freelancer.Id">Perfil</a>
+                            </p>
+                        }
+                    }
+
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Titulo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cargo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tipo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Remuneracao)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
