Finaliza pag home

--- a/SocialMediaFreelas.App/Pages/Shared/_LayoutCustomNaoLogado.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_LayoutCustomNaoLogado.cshtml
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                     <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#quemSomos">Quem somos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#clientes">Clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#parceiros">Parceiros</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                 </ul>
             </div>
