Ajustes no freelancer e cliente

--- a/SocialMediaFreelas.App/Pages/Clientes/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Delete.cshtml
@@ -86,11 +86,15 @@
         padding: 10px 20px !important;
         cursor: pointer !important;
     }
+
+
 </style>
 
 <div class="profile-container">
     <div class="profile-sidebar">
-        <img src="~/assets/img/cliente.jpg" alt="Profile Picture"> <!-- Changed image to client image -->
+          <div class="form-icon">
+            <span><i class="icon icon-minus"></i></span>
+        </div>
         <h2>Excluir perfil</h2>
     </div>
     <div class="profile-form">
