--- a/SocialMediaFreelas.App/Pages/Clientes/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Edit.cshtml
@@ -87,11 +87,26 @@
         cursor: pointer !important;
     }
 
+
+.form-icon {
+    text-align: center;
+    background-color: #5891ff;
+    border-radius: 50%;
+    font-size: 40px;
+    color: white;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+    line-height: 100px;
+}
 </style>
 
 <div class="profile-container">
     <div class="profile-sidebar">
-        <img src="~/assets/img/cliente.jpg" alt="Profile Picture">
+        <div class="form-icon">
+            <span><i class="icon icon-note"></i></span>
+        </div>
         <h2>Editar perfil</h2>
     </div>
     <div class="profile-form">
