--- a/SocialMediaFreelas.App/Pages/Home/Cliente/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Home/Cliente/Index.cshtml
@@ -7,26 +7,15 @@
 <style>
 
 
-    @@media (min-width: 1000px)
-    {
 
-        .profile-img {
-            max-width: 500px !important;
-        }
-        
+    header 
+    {
+       color: #fff !important;
     }
 
-    @@media (min-width: 1500px) {
-
-        .profile-img 
-        {
-            max-width: 400px !important;
-        }
-
-        #titulo-principal-home
-        {
-            max-width: 60ch;
-        }
+    .text-muted 
+    {
+        color: #fff !important;
     }
 </style>
 
