--- a/SocialMediaFreelas.App/Pages/Home/Freelancer/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Home/Freelancer/Index.cshtml
@@ -6,7 +6,16 @@
 
 <style>
 
-   
+       header 
+    {
+       color: #fff !important;
+    }
+
+    .text-muted 
+    {
+        color: #fff !important;
+    }
+
 </style>
 
     <!-- Navigation-->
