--- a/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
@@ -91,7 +91,9 @@
 
 <div class="profile-container">
     <div class="profile-sidebar">
-        <img src="~/assets/img/cliente.jpg" alt="Profile Picture">
+        <div class="form-icon">
+            <span><i class="icon icon-user"></i></span>
+        </div>
         <h2>Detalhes do perfil</h2>
     </div>
     <div class="profile-form">
