--- a/SocialMediaFreelas.App/Pages/Freelancers/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Delete.cshtml
@@ -90,7 +90,9 @@
 
 <div class="profile-container">
     <div class="profile-sidebar">
-        <img src="~/assets/img/freelancer.jpg" alt="Profile Picture">
+        <div class="form-icon">
+            <span><i class="icon icon-minus"></i></span>
+        </div>
         <h2>Excluir perfil</h2>
     </div>
     <div class="profile-form">
