--- a/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
@@ -13,12 +13,12 @@
     <style>
         body {
             background: linear-gradient(180deg, #4e89ff, #2f5299) !important;
-            color: #fff !important;
+            @* color: #fff !important; *@
         }
 
-        .text-muted {
+        @* .text-muted {
             color: #fff !important;
-        }
+        } *@
 
         .button-29 {
             align-items: center;
@@ -86,6 +86,19 @@
             margin-top: 40px;
             color: rgb(0, 123, 255);
         }
+
+    .form-icon {
+    text-align: center;
+    background-color: #5891ff;
+    border-radius: 50%;
+    font-size: 40px;
+    color: white;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+    line-height: 100px;
+}
     </style>
 </head>
 <body>
