--- a/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
@@ -5,11 +5,102 @@
 }
 
 <style>
-    .classe{
-        background: red !important;
-    }
+
+.registration-form {
+    padding: 50px 0;
+}
+
+.registration-form form {
+    background: #fff;
+    max-width: 400px;
+    margin: auto;
+    padding: 30px 50px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-radius: 30px;
+    box-shadow: 0px 2px 10px 0px #f7f7f7;
+}
+
+.registration-form .form-icon {
+    text-align: center;
+    background-color: #5891ff;
+    border-radius: 50%;
+    font-size: 40px;
+    color: white;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+    line-height: 100px;
+}
+
+.registration-form .form-group {
+    margin-bottom: 20px;
+}
+
+.registration-form .form-control {
+    border: 2px solid #d7d7d7;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+    height: 40px;
+}
+
+.registration-form .form-control:focus {
+    border-color: #5891ff;
+    box-shadow: 0 0 8px 0 #5891ff;
+}
+
+.registration-form .create-account {
+    background: #5891ff;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    margin-top: 20px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.registration-form .create-account:hover {
+    background: #4478e3;
+}
+
 </style>
 
+  <div class="registration-form">
+        <form id="create-job-form">
+            <div class="form-icon">
+                <span><i class="icon icon-briefcase"></i></span>
+            </div>
+            @* <h2 class="text-center">Criar Vaga</h2> *@
+            <div class="form-group">
+                <input type="text" class="form-control item" id="title" placeholder="Título da Vaga" required>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="position" placeholder="Cargo" required>
+            </div>
+            <div class="form-group">
+                <select class="form-control item" id="job-type" required>
+                    <option value="" disabled selected>Tipo da Vaga</option>
+                    <option value="full-time">Tempo Integral</option>
+                    <option value="part-time">Meio Período</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="remuneration" placeholder="Remuneração" required>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control item" id="description" placeholder="Descrição da Vaga" rows="10" required></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-block create-account">Criar Vaga</button>
+            </div>
+        </form>
+    </div>
+
+
+@* 
 <h1>Create</h1>
 
 <h4>Vaga</h4>
@@ -71,4 +162,4 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+} *@
