Criacao design na Pag Experiencias

--- a/SocialMediaFreelas.App/Pages/Freelancers/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Delete.cshtml
@@ -86,6 +86,14 @@
         padding: 10px 20px !important;
         cursor: pointer !important;
     }
+
+    .profile-sidebar h2 {
+        color: #495057;
+    }
+
+    .control-label{
+        color: #495057;
+    }
 </style>
 
 <div class="profile-container">
