--- a/SocialMediaFreelas.App/Pages/Freelancers/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Edit.cshtml
@@ -87,7 +87,13 @@
         cursor: pointer !important;
     }
 
+    .profile-sidebar h2 {
+        color: #495057;
+    }
 
+    .control-label{
+        color: #495057;
+    }
 </style>
 
 <div class="profile-container">
