Adiciona campo sobre no freelancer e localizacao,status no vaga

--- a/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
+++ b/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
@@ -23,7 +23,7 @@
     <div class="container px-5">
         @if(Model != null)
         {
-            <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Freelas Unit - @Model.Role.ToString()</span></a>
+            <a class="navbar-brand" href="#"><span class="fw-bolder text-primary">Freelas Unit - @Model.Role.ToString()</span></a>
         }
         else {
             <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Freelas Unit</span></a>
