--- a/SocialMediaFreelas.App/Pages/Freelancers/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Create.cshtml
@@ -137,6 +137,11 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="FreelancerInputModel.Sobre" class="control-label"></label>
+                <input asp-for="FreelancerInputModel.Sobre" class="form-control" />
+            </div>
+
+            <div class="form-group">
                 <label asp-for="FreelancerInputModel.PretensaoSalarial" class="control-label"></label>
                 <input asp-for="FreelancerInputModel.PretensaoSalarial" class="form-control" />
             </div>
