--- a/SocialMediaFreelas.App/Pages/Freelancers/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Edit.cshtml
@@ -147,6 +147,12 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="FreelancerUpdateModel.Sobre" class="control-label"></label>
+                <input asp-for="FreelancerUpdateModel.Sobre" class="form-control" />
+                <span asp-validation-for="FreelancerUpdateModel.Sobre" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="FreelancerUpdateModel.PretensaoSalarial" class="control-label"></label>
                 <input asp-for="FreelancerUpdateModel.PretensaoSalarial" class="form-control" />
                 <span asp-validation-for="FreelancerUpdateModel.PretensaoSalarial" class="text-danger"></span>
