--- a/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
@@ -87,6 +87,15 @@
                     <option value="part-time">Meio Período</option>
                 </select>
             </div>
+
+            <div class="form-group">
+                <input type="text" class="form-control item" id="localizacao" placeholder="Localizacao" required>
+            </div>
+
+            <div class="form-group">
+                <input type="text" class="form-control item" id="status" placeholder="Status" required>
+            </div>
+
             <div class="form-group">
                 <input type="text" class="form-control item" id="remuneration" placeholder="Remuneração" required>
             </div>
