--- a/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
@@ -41,6 +41,16 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="VagaViewModel.Localizacao" class="control-label"></label>
+                <input asp-for="VagaViewModel.Localizacao" class="form-control" disabled />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="VagaViewModel.Status" class="control-label"></label>
+                <input asp-for="VagaViewModel.Status" class="form-control" disabled />
+            </div>
+
+            <div class="form-group">
                 <label asp-for="VagaViewModel.Remuneracao" class="control-label"></label>
                 <input asp-for="VagaViewModel.Remuneracao" class="form-control" disabled />
             </div>
