--- a/SocialMediaFreelas.App/Pages/Clientes/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Delete.cshtml
@@ -112,6 +112,11 @@
                 <label asp-for="ClienteViewModel.Nome" class="control-label"></label>
                 <input asp-for="ClienteViewModel.Nome" class="form-control" disabled />
             </div>
+            
+            <div class="form-group">
+                <label asp-for="ClienteViewModel.Sobre" class="control-label"></label>
+                <input asp-for="ClienteViewModel.Sobre" class="form-control" disabled />
+            </div>
 
             <div class="form-group">
                 <label asp-for="ClienteViewModel.DataNascimento" class="control-label"></label>
