--- a/SocialMediaFreelas.App/Pages/Clientes/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Edit.cshtml
@@ -126,6 +126,12 @@
                 <input asp-for="ClienteUpdateModel.Nome" class="form-control" />
                 <span asp-validation-for="ClienteUpdateModel.Nome" class="text-danger"></span>
             </div>
+            
+            <div class="form-group">
+                <label asp-for="ClienteUpdateModel.Sobre" class="control-label"></label>
+                <input asp-for="ClienteUpdateModel.Sobre" class="form-control" />
+                <span asp-validation-for="ClienteUpdateModel.Sobre" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <label asp-for="ClienteUpdateModel.DataNascimento" class="control-label"></label>
