--- a/SocialMediaFreelas.App/Pages/Register/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Register/Index.cshtml
@@ -122,6 +122,11 @@ html, body {
             <div class="form-group">
                 <input type="text" class="form-control item" id="username" placeholder="Nome Completo">
             </div>
+
+            <div class="form-group">
+                <input type="text" class="form-control item" id="about" placeholder="Sobre">
+            </div>
+
             <div class="form-group">
                 <input type="text" class="form-control item" id="document" placeholder="Documento">
             </div>
