--- a/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
@@ -24,6 +24,9 @@
                 @Html.DisplayNameFor(model => model.Response[0].Nome)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Response[0].Sobre)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Response[0].Telefone)
             </th>
             <th>
@@ -41,6 +44,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sobre)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Telefone)
