--- a/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
+++ b/SocialMediaFreelas.App/Pages/Components/Top/Default.cshtml
@@ -36,6 +36,9 @@
                 {
                 <li class="nav-item"><a class="nav-link" asp-page="/Home/Freelancer/Index">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" asp-page="/Experiencias/IndexByUser">Minhas Experiencias</a></li> 
+
+                <li class="nav-item"><a class="nav-link" asp-page="/Vagas/IndexByFreelancerId">Minhas Vagas</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-page="/Vagas/Index">Vagas</a></li>
                 }
 
                 @if (Model != null && Model.Role == Frontend.Enums.EUserRole.Cliente)
