--- a/SocialMediaFreelas.App/Pages/Freelancers/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Details.cshtml
@@ -99,7 +99,7 @@ h2 {
                 <p class="">@Model.FreelancerViewModel.Email</p>
                 <p class="">@Model.FreelancerViewModel.Sobre</p>
                 @* <p class="card-text"><small class="text-body-secondary">Online</small></p> *@
-                <a href="https://web.whatsapp.com/" class="btn btn-success">Whatsapp</a>
+                <a href="https://wa.me/@Model.FreelancerViewModel.Telefone" class="btn btn-success">Whatsapp</a>
             </div>
         </div>
     </div>
@@ -108,9 +108,9 @@ h2 {
 
 <div class="container-exp mt-2">
 
-    <table class="table table-bordered align-middle table-light">
+    <table class="table table-bordered align-middle table-light text-primary">
         <h2>Experiências</h2>
-        <thead class="table table-dark">
+        <thead class="table table-light text-primary">
             <tr>
                 <th scope="col">Projeto</th>
                 <th scope="col">Empresa</th>
@@ -133,20 +133,6 @@ h2 {
                     </tr>
                     }
                 }
-                 <tr>
-                        <th scope="row">experiencia.Projeto</th>
-                        <td>experiencia.Empresa</td>
-                        <td>experiencia.Tecnologia</td>
-                        <td>experiencia.Valor</td>
-                        <td>experiencia.Avaliacao</td>
-                    </tr>
-                     <tr>
-                        <th scope="row">experiencia.Projeto</th>
-                        <td>experiencia.Empresa</td>
-                        <td>experiencia.Tecnologia</td>
-                        <td>experiencia.Valor</td>
-                        <td>experiencia.Avaliacao</td>
-                    </tr>
         </tbody>
     </table>
 </div>
